# demo-project-with-pyproject.toml

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/huge/: get_name.py
tests/: test_huge.py
